--- a/Views/Pessoa/Delete.cshtml
+++ b/Views/Pessoa/Delete.cshtml
@@ -5,34 +5,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Pessoa</title>
+    <title>Excluir Pessoa</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Editar Pessoa</h1>
+        <h1 class="text-center mb-4">Excluir Pessoa</h1>
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8">
-                <form asp-action="Update" class="bg-light p-4 rounded shadow-sm">
+                <form asp-action="Delete" onsubmit="return confirmExcluir();">
+
                     <div class="form-group mb-3">
                         <label asp-for="Nome" class="control-label"><strong>Nome</strong></label>
-                        <span asp-validation-for="Nome" class="text-danger"></span>
-                        <input asp-for="Nome" class="form-control"/>
+                        <input asp-for="Nome" class="form-control" readonly />
                     </div>
                     <div class="form-group mb-3">
-                        <label asp-for="CPF" class="control-label"><strong>CPF</strong></label>
-                        <span asp-validation-for="CPF" class="text-danger"></span>
-                        <input asp-for="CPF" class="form-control"/>
+                        <label asp-for="CPF" class="control-label"><strong>CPF ou CNPJ</strong></label>
+                        <input asp-for="CPF" class="form-control" readonly />
                     </div>
                     <div class="form-group mb-4">
                         <label asp-for="Email" class="control-label"><strong>E-mail</strong></label>
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                        <input asp-for="Email" class="form-control"/>
+                        <input asp-for="Email" class="form-control" readonly />
                     </div>
                     <div class="form-group mb-4">
-                        <input type="submit" value="Editar" class="btn btn-primary w-100" />
+                        <input type="submit" value="Excluir" class="btn btn-danger w-100" />
                     </div>
                 </form>
                 <a asp-action="Index" class="btn btn-success w-100 mt-3">Voltar</a>
@@ -40,13 +38,17 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+        function confirmExcluir() {
+            var nome = "@Model.Nome";
+            var cpfCnpj = "@Model.CPF";
+            var email = "@Model.Email";
+
+            var mensagem = `Tem certeza que deseja excluir o cliente: \n\nNome: ${nome}\nCPF/CNPJ: ${cpfCnpj}\nEmail: ${email}`;
+            return confirm(mensagem);
+        }
+    </script>
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js"></script>
 </body>
 </html>
-
-    @section Scripts {
-        @{
-            await Html.RenderPartialAsync("_ValidationScriptsPartial");
-        }
-    }
