--- a/Views/Banco/Create.cshtml
+++ b/Views/Banco/Create.cshtml
@@ -1,4 +1,4 @@
-@model Projeto_Controlador_Financeiro_Pessoal.Models.Pessoa
+@model Projeto_Controlador_Financeiro_Pessoal.Models.Banco
 
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Nova Pessoa</title>
+    <title>Cadastrar Novo Banco</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
@@ -19,19 +19,9 @@
             <div class="col-lg-8 col-md-10">
                 <form asp-action="Create" class="bg-light p-4 rounded shadow-sm">
                     <div class="form-group mb-3">
-                        <label asp-for="Nome" class="form-label"><strong>Nome</strong></label>
-                        <span asp-validation-for="Nome" class="text-danger"></span>
-                        <input asp-for="Nome" class="form-control" placeholder="Digite o Nome" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="CPF" class="form-label"><strong>CPF</strong></label>
-                        <span asp-validation-for="CPF" class="text-danger"></span>
-                        <input asp-for="CPF" class="form-control" placeholder="Digite o CPF" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="Email" class="form-label"><strong>E-mail</strong></label>
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                        <input asp-for="Email" class="form-control" placeholder="Digite o E-mail" />
+                        <label asp-for="NomeBanco" class="form-label"><strong>Nome do Banco</strong></label>
+                        <span asp-validation-for="NomeBanco" class="text-danger"></span>
+                        <input asp-for="NomeBanco" class="form-control" placeholder="Digite o Nome" />
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Cadastrar" class="btn btn-primary w-100" />
