--- a/Views/Banco/Delete.cshtml
+++ b/Views/Banco/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Projeto_Controlador_Financeiro_Pessoal.Models.Pessoa
+@model Projeto_Controlador_Financeiro_Pessoal.Models.Banco
 
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -11,23 +11,15 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Excluir Pessoa</h1>
+        <h1 class="text-center mb-4">Excluir Banco</h1>
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8">
                 <form asp-action="Delete" onsubmit="return confirmExcluir();">
 
                     <div class="form-group mb-3">
-                        <label asp-for="Nome" class="control-label"><strong>Nome</strong></label>
-                        <input asp-for="Nome" class="form-control" readonly />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="CPF" class="control-label"><strong>CPF ou CNPJ</strong></label>
-                        <input asp-for="CPF" class="form-control" readonly />
-                    </div>
-                    <div class="form-group mb-4">
-                        <label asp-for="Email" class="control-label"><strong>E-mail</strong></label>
-                        <input asp-for="Email" class="form-control" readonly />
+                        <label asp-for="NomeBanco" class="control-label"><strong>Nome do Banco</strong></label>
+                        <input asp-for="NomeBanco" class="form-control" readonly />
                     </div>
                     <div class="form-group mb-4">
                         <input type="submit" value="Excluir" class="btn btn-danger w-100" />
@@ -40,11 +32,9 @@
 
     <script type="text/javascript">
         function confirmExcluir() {
-            var nome = "@Model.Nome";
-            var cpf = "@Model.CPF";
-            var email = "@Model.Email";
+            var nome = "@Model.NomeBanco";
 
-            var mensagem = `Tem certeza que deseja excluir o cliente: \n\nNome: ${nome}\nCPF/CNPJ: ${cpf}\nEmail: ${email}`;
+            var mensagem = `Tem certeza que deseja excluir o banco: \n\nNome: ${nome}`;
             return confirm(mensagem);
         }
     </script>
