--- a/Views/Banco/Update.cshtml
+++ b/Views/Banco/Update.cshtml
@@ -1,4 +1,4 @@
-@model Projeto_Controlador_Financeiro_Pessoal.Models.Pessoa
+@model Projeto_Controlador_Financeiro_Pessoal.Models.Banco
 
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -6,32 +6,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Pessoa</title>
+    <title>Editar Banco</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Editar Pessoa</h1>
+        <h1 class="text-center mb-4">Editar Banco</h1>
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8">
                 <form asp-action="Update" class="bg-light p-4 rounded shadow-sm">
                     <div class="form-group mb-3">
-                        <label asp-for="Nome" class="control-label"><strong>Nome</strong></label>
-                        <span asp-validation-for="Nome" class="text-danger"></span>
-                        <input asp-for="Nome" class="form-control" />
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="CPF" class="control-label"><strong>CPF</strong></label>
-                        <span asp-validation-for="CPF" class="text-danger"></span>
-                        <input asp-for="CPF" class="form-control" />
-                    </div>
-                    <div class="form-group mb-4">
-                        <label asp-for="Email" class="control-label"><strong>E-mail</strong></label>
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                        <input asp-for="Email" class="form-control" />
+                        <label asp-for="NomeBanco" class="control-label"><strong>Nome</strong></label>
+                        <span asp-validation-for="NomeBanco" class="text-danger"></span>
+                        <input asp-for="NomeBanco" class="form-control" />
                     </div>
                     <div class="form-group mb-4">
                         <input type="submit" value="Editar" class="btn btn-primary w-100" />
