--- a/Views/Lancamento/Delete.cshtml
+++ b/Views/Lancamento/Delete.cshtml
@@ -4,43 +4,65 @@
 
 <form asp-action="Delete" class="container" onsubmit="return confirmExluir();">
     <div class="row">
+
         <div class="col-md-6 mb-3">
-            <label asp-for="PessoaId" class="form-label"><strong>Pessoa</strong></label>
+            <label asp-for="PessoaId" class="form-label fw-bold">Pessoa</label>
             <select asp-for="PessoaId" asp-items="@ViewBag.Pessoa" class="form-control" readonly></select>
         </div>
+
         <div class="col-md-6 mb-3">
-            <label asp-for="BancoId" class="form-label"><strong>Banco</strong></label>
+            <label asp-for="BancoId" class="form-label fw-bold">Banco</label>
             <select asp-for="BancoId" asp-items="@ViewBag.Banco" class="form-control" readonly></select>
         </div>
     </div>
 
     <div class="row">
+
         <div class="col-md-6 mb-3">
-            <label asp-for="DataCompra" class="form-label"><strong>Data da Venda</strong></label>
+            <label asp-for="DataCompra" class="form-label fw-bold">Data da Venda</label>
             <input asp-for="DataCompra" class="form-control" readonly/>
             <span asp-validation-for="DataCompra" class="text-danger"></span>
         </div>
+
         <div class="col-md-6 mb-3">
-            <label asp-for="Valor" class="form-label"><strong>Valor</strong></label>
-            <input asp-for="Valor" class="form-control" readonly/>
-            <span asp-validation-for="Valor" class="text-danger"></span>
+            <label asp-for="ValorTotal" class="form-label fw-bold">Valor</label>
+            <input asp-for="ValorTotal" class="form-control" placeholder="Digite o Valor da Compra" readonly/>
+            <span asp-validation-for="ValorTotal" class="text-danger"></span>
         </div>
     </div>
 
     <div class="row">
+
         <div class="col-md-6 mb-3">
-            <label asp-for="TipoPagamento" class="form-label"><strong>Tipo do Pagamento</strong></label>
-            <select asp-for="TipoPagamento" asp-items="@ViewBag.TipoPagamento" class="form-control" readonly></select>
+            <label asp-for="TipoPagamento" class="form-label fw-bold">Tipo de Pagamento</label>
+            <select asp-for="TipoPagamento" asp-items="@ViewBag.TipoPagamento" class="form-control" id="tipoPagamento" readonly></select>
         </div>
+
         <div class="col-md-6 mb-3">
-            <label asp-for="Descricao" class="form-label"><strong>Descrição</strong></label>
-            <input asp-for="Descricao" class="form-control" readonly/>
+            <label asp-for="Descricao" class="form-label fw-bold">Descrição</label>
+            <input asp-for="Descricao" class="form-control" placeholder="Digite o Descrição da Compra" readonly/>
             <span asp-validation-for="Descricao" class="text-danger"></span>
         </div>
     </div>
+
+
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <label asp-for="NumeroParcelas" class="form-label fw-bold">Número de Parcelas</label>
+            <input asp-for="NumeroParcelas" class="form-control" id="numeroParcelas" disabled>
+            <span asp-validation-for="NumeroParcelas" class="text-danger"></span>
+        </div>
+        <div class="col-md-6 d-flex align-items-center">
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="parcelamentoCheckbox" onclick="alternarParcelas()" readonly>
+                <label class="form-check-label fw-bold" for="parcelamentoCheckbox">Compra é Parcelada?</label>
+            </div>
+        </div>
+    </div>
+
     <div class="d-flex justify-content-between mt-4">
-        <button type="submit" class="btn btn-primary w-100">Salvar Exclusão</button>
-        <a asp-action="Index" class="btn btn-success w-100 me-2">Voltar</a>
+        <button type="submit" class="btn btn-primary w-100 me-2">Salvar Exclusão</button>
+        <a asp-action="Index" class="btn btn-success w-100">Voltar</a>
     </div>
 </form>
 @if (!ViewData.ModelState.IsValid)
@@ -55,7 +77,7 @@
         var bancoNome = "@Model.Banco.NomeBanco";
         var dataCompra = "@Model.DataCompra.ToString("dd/MM/yyyy")";
         var descricao = "@Model.Descricao";
-        var valor = "@Model.Valor.ToString("C2")";
+        var valor = "@Model.ValorTotal.ToString("C2")";
 
         var mensagem = `Tem certeza que deseja excluir o lançamento: \nPessoa: ${pessoaNome} \nBanco: ${bancoNome} \nData da compra: ${dataCompra} \nDescrição: ${descricao} \nValor: ${valor}`;
         return confirm(mensagem);
