--- a/Views/Lancamento/Create.cshtml
+++ b/Views/Lancamento/Create.cshtml
@@ -19,7 +19,7 @@
     <div class="row">
 
         <div class="col-md-6 mb-3">
-            <label asp-for="DataCompra" class="form-label fw-bold">Data da Venda</label>
+            <label asp-for="DataCompra" class="form-label fw-bold">Data da Compra</label>
             <input asp-for="DataCompra" class="form-control" />
             <span asp-validation-for="DataCompra" class="text-danger"></span>
         </div>
