--- a/Views/Relatorio/CarteiraDebito.cshtml
+++ b/Views/Relatorio/CarteiraDebito.cshtml
@@ -1,6 +1,6 @@
 @model Projeto_Controlador_Financeiro_Pessoal.Models.Relatorio
 
-<h2 class="text-center mb-4">Relatório de Vendas</h2>
+<h2 class="text-center mb-4">Relatório de Compras a Vista</h2>
 
 <form asp-action="CarteiraDebito" class="container">
     <div class="row mb-3">
